all is functioning with dynamic dropdown input

--- a/public/css/heatwave.css
+++ b/public/css/heatwave.css
@@ -1,7 +1,17 @@
 #canvas {
 	border: 2px solid black;
 	width: 600px;
-	height: 200px;
+	height: 400px;
 	margin-left: 65px;
 	margin-top: 25px;
+}
+
+#hour-labels {
+	text-align: right; 
+	margin-top: 35px; 
+	margin-right: -45px;
+}
+
+#hour-labels p {
+	padding-top: 24px;
 }
