--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,10 +28,26 @@
 	</div>
 	<div>
 		<div class="row">
-			<div class="col-md-2" style="text-align: center; margin-top: 125px"><p>Day of Week</p></div>
+			<div class="col-md-2" id="hour-labels">
+				<b>Hour of Day</b>
+				<p>4am-8am</p>
+				<p>12am-4am</p>
+				<p>8pm-12am</p>
+				<p>4pm-8pm</p>
+				<p>12pm-4pm</p>
+				<p>8am-12pm</p>
+			</div>
 			<div class="col-md-10"><canvas id="canvas"></canvas></div>
-			<div class="row">
-				<div class="col-md-12" style="margin-left: 325px"><p>Hour of Day</p></div>
+			<div class="row" style="margin-left: 80px">
+				<div class="col-md-2"><b>Day of Week</b></div>
+				<div class="col-md-1"><p>Mon</p></div>
+				<div class="col-md-1"><p>Tues</p></div>
+				<div class="col-md-1"><p>Wed</p></div>
+				<div class="col-md-1"><p>Thurs</p></div>
+				<div class="col-md-1"><p>Fri</p></div>
+				<div class="col-md-1"><p>Sat</p></div>
+				<div class="col-md-1"><p>Sun</p></div>
+				<div class="col-md-3"><p></p></div>
 			</div>
 		</div>
 	</div>
