--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,10 @@
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
 </head>
 <body class="container">
+	<div>
+		<h2>It's a Heat Wave!</h2>
+		<h5>By: Kacy Hulme -- <a href="http://www.kacyhulme.com">Contact me</a></h5>
+	</div>
 	<div class="row">
 		<select name="daysofweek" id="daysofweek">
 			<option value="monday">Monday</option>
@@ -47,6 +51,24 @@
 				<p id="display-day"></p>
 			</div>
 		</div>
+		<hr>
+		<div class="row">
+			<div class="col-md-4">
+			</div>
+			<div class="col-md-8">
+				<table>
+					<tr>
+					<th style="text-align: center; background-color: red">Red</th>
+						<th style="text-align: center; background-color: yellow">Yellow</th> 
+						<th style="text-align: center; background-color: blue">Blue</th>
+					</tr>
+					<tr>
+						<td>80+ degrees</td>
+						<td>50 - 80 degrees</td> 
+						<td>-50 degrees</td>
+					</tr>
+				</table>
+			</div>
 		</div>
 	</div>
 	<script type="text/javascript" src="js/heatwave.js"></script>
