--- a/public/css/heatwave.css
+++ b/public/css/heatwave.css
@@ -15,3 +15,10 @@
 #hour-labels p {
 	padding-top: 24px;
 }
+
+table, th, td {
+    border: 1px solid black;
+    width: 350px;
+    height: 50px;
+    text-align: center;
+}
