--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,7 +28,7 @@
 			<option value="4am-8am">4am-8am</option>
 		</select>
 		<input type="submit" value="Submit" id="submit">
-
+		<p>** Don't forget to click the Submit button.</p>
 	</div>
 	<div>
 		<div class="row">
@@ -58,7 +58,7 @@
 			<div class="col-md-8">
 				<table>
 					<tr>
-					<th style="text-align: center; background-color: red">Red</th>
+						<th style="text-align: center; background-color: red">Red</th>
 						<th style="text-align: center; background-color: yellow">Yellow</th> 
 						<th style="text-align: center; background-color: blue">Blue</th>
 					</tr>
